--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movies-series",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://irfanonk.github.io/movieInfo",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -20,6 +21,8 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
